<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project\nChatter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="record">Record</string>
    <string name="welcome">Welcome to Project Chatter. Click Settings to connect to a server and Record for command recording.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_port_default">4444</string>
    <string name="mic_desctiption">ImageButton for recording voice.</string>
    <string name="server_directory">Server Directory</string>
    <string name = "app_name_launcher">Chatter</string>
    <string name="port">Port</string>
    <string name="settings_directory_default">sslab10.cs.purdue.edu</string>
    <string name="settings">Settings</string><string name="desc">String</string>
    

</resources>